Correct spacing issues

--- a/css/base/_reset.scss
+++ b/css/base/_reset.scss
@@ -1,10 +1,10 @@
-/*------------------------------------------------------------
+/*----------------------------------------------------------
 	GENERAL RESETS
-------------------------------------------------------------*/
+----------------------------------------------------------*/
 
 html {
 	height: 100%;
-	overflow: scroll; // Force vertical scrollbar to avoid page 'jumping'
+	overflow: scroll; // Force vertical scrollbar to avoid page width 'jumping'
 	overflow-x: hidden;
 	overflow-y: scroll;
 }
@@ -42,9 +42,9 @@ img {
 
 
 
-/*------------------------------------------------------------
+/*----------------------------------------------------------
 	POSITIONING AND SPACING
-------------------------------------------------------------*/
+----------------------------------------------------------*/
 
 .left {
 	text-align: left
@@ -104,9 +104,9 @@ img {
 
 
 
-/*------------------------------------------------------------
+/*----------------------------------------------------------
 	HIDING BASED ON SCREEN SIZE
-------------------------------------------------------------*/
+----------------------------------------------------------*/
 
 .hidden {
 	display: none !important;
