--- a/css/layout/_content.scss
+++ b/css/layout/_content.scss
@@ -55,6 +55,12 @@ main {
 	}
 }
 
+.tertiary {
+	.content {
+		padding: 120px 0 55px;
+	}
+}
+
 .small.quote {
   margin: 15px 0 19px 0;
   padding-bottom: 0.2rem;
@@ -129,6 +135,12 @@ main {
 		}
 	}
 
+	.tertiary {
+		.content {
+			padding: 175px 0 125px;
+		}
+	}
+	
 	.blog {
 		.content {
 			padding-top: 113px;
