--- a/css/layout/_forms.scss
+++ b/css/layout/_forms.scss
@@ -71,6 +71,12 @@ form {
 	}
 }
 
+footer {
+	form {
+		margin-bottom: 1px;
+	}
+}
+
 .asterisk {
   color: $orange;
   font-weight: 500;
